k8s/base/result-service.yml
# result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: frontend 
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
