k8s/base/worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: work-service
  namespace: backend
spec:
  selector:
    app: work
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
